wrote media queries to make the site responsive

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <header class="header">
+         <header class="header">
             <nav class="top-nav">
                 <ul class="top-nav__list">
                     <li class="top-nav__logo-box">
@@ -280,6 +280,8 @@
                 </div>
             </div>
         </div>
+
+        <!-- Featured Section -->
         <div class="featured">
            <div class="featured__header">
                <div class="section-header">
@@ -424,6 +426,9 @@
                 </div>
            </div>
         </div>
+        <!-- Featured section end -->
+
+
         <div class="watch">
            <div class="watch__header">
                <div class="section-header">
@@ -559,7 +564,7 @@
                         
                     </div>
                 </div>
-                <div class="watch__content-trending">
+                <div class="watch__content--trending">
                     <h3 class="news-box__header video-box-header">Trending<h3>
                         <div class="news-box">                            
                             <div class="news-box__top">
@@ -603,7 +608,7 @@
         <div class="photos">
             <div class="photos__header">
                 <div class="section-header">
-                    <h4 class="heading-3">Watch It</h4>
+                    <h4 class="heading-3">Photos</h4>
                     <div class="section-header__line">
  
                     </div>
