removed top nav on small screens

--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
                     </div>
                     <h4 class="heading-2">Johnson and johnson aims to produce 1 billion coronavirus vaccines for next year</h4>
                     <ul class="e-ul">
-                        <li class="e-li"><span>News in brief: </span>Two new hotspots emerge.</li>
+                        <li class="e-li"><span>News in brief: </span>Two new hotspots emerge</li>
                     </ul>                                        
                 </div>
                 <div class="news-box">
