removed top nav on small screens

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-         <header class="header">
+         <!-- <header class="header">
             <nav class="top-nav">
                 <ul class="top-nav__list">
                     <li class="top-nav__logo-box">
@@ -232,7 +232,7 @@
                         </div>
                     </div>                    
             </nav>
-        </header>
+        </header> -->
         <nav class="navigation">
             <ul class="navigation__list">
                 <li class="navigation__list--item">
