removed top nav on small screens

--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                         <img src="./img/boris johnson.jpg" alt="" class="news-box__photo">
                         <p class="red-headline__text">Breaking News</p>
                     </div>
-                    <h4 class="heading-4">The British Prime Minister announced the changes as he called on millions to go back to work</h4>
+                    <h4 class="heading-4">The British Prime Minister announced the changes as he called on millions to go back to work.</h4>
                     <ul class="news-box__taglines">
                         <li class="news-box__tagline"><span>Live Updates</span>&nbsp;People flying into the UK will have to quarantine</li>
                         <li class="news-box__tagline">British man makes face shields for police after officer was spat on</li>
